main.css
@font-face {
    font-family: 'EffraRegular';
    src: url('./fonts/EFFRA_STD_RG.TTF') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'EffraLight';
    src: url('./fonts/EFFRA_STD_LT.TTF') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Effra';
    src: url('./fonts/EFFRA_STD.TTF') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'March';
    src: url('./fonts/MARCHEVOKED-DEMO.OTF') format('truetype');
    font-weight: normal;
    font-style: normal;
}

.effra-regular {
    font-family: 'EffraRegular', sans-serif;
}

.march-regular {
    font-family: 'March', sans-serif;
}

* {
    padding: 0;
    margin: 0;
    font-family: EffraLight, 'serif';
    box-sizing: border-box;
}

body {
    background-color: #DBD4BF;
}

.background-image {
    background-image: url("./images/bg-desktop.png");
    background-repeat: no-repeat;
    background-size: cover;
    height: 900px;
    /* max-width: 2560px; */
    width: 100%;
}

.titulo {
    font-family: 'March', sans-serif;
    font-size: 100px;
    color: #fff;
    display: flex;
    justify-content: center;
    padding: 300px;
}

.container   {
    max-width: 1024px;
    width: 100%;
    margin: 0 auto;
}

header {
    padding: 24px 60px;
    display: flex;
    justify-content: space-between;
}

header .container {
    display: flex;
    align-items: center;
}

.logo img {
    height: 45px
}

.menu > li {
    float: left;
    list-style: none;
    padding: 16px;
    border-bottom: 4px solid transparent;
}

.menu > li:hover {
    border-bottom: 2px solid white;
    /* width: 10%; */
}

.menu li a {
    text-decoration: none;
    color: #fff;
}

.clear {
    clear: both;
}

.sobre {
    display: grid;
    grid-template-columns: 50% 50%;
    margin-top: 100px;
}

.sobre-img img {
    height: 500px;
}

.sobre-texto {
    float: left;
    padding: 100px 0;
    color: #4E4138;
}

.sobre-texto p {
    margin-top: 20px;
}

.sobre-icones {
    display: flex;
}

.sobre-icones ul {
    margin-top: 20px;
    display: flex;
}

.sobre-icones li {
    list-style: none;
    margin-right: 8px;
}

.sobre-icones img {
    height: 20px;
}

/* PRODUTOS ITENS */

.itens {
    margin-top: 100px;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    column-gap: 1%;
    margin-bottom: 100px;
}

.item img {
    max-width: 100%;
    height: 300px;
    width: 100%;
    object-fit: cover;
}

.item a {
    text-decoration: none;
}

.desconto {
    margin-right: 5px;
    color: #888;
    text-decoration: line-through;
}

.topo-item {
    display: flex;
    padding: 8px 0;
    justify-content: space-between;
}

.topo-item img {
    object-fit: cover;
}

.topo-item p, span {
    text-transform: uppercase;
    font-weight: bold;
    color: #4E4138;
}

.carrinho {
    width: 100%;
    padding: 5px 10px 5px 5px;
    background-color: #fff;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 14px;
    display: flex;
    justify-content: flex-end;
}

.carrinho p {
    color: #4E4138;
}

/* galeria */

.galeria {
    margin-top: 100px;
}

.galeria-texto {
    margin-bottom: 30px;
}

.galeria-itens {
    display: grid;
    grid-template-columns: repeat(5, 19.2%);
    column-gap: 1%;
    row-gap: 1%;
}

h2 {
    font-family: 'March', sans-serif;  
    font-size: 32px;  
    color: #4E4138;
}

.galeria img {
    height: 200px;
    width: 100%;
    object-fit: cover;
}

.galeria-arroba {
    margin-top: 5px;
    float: right;
    font-size: 24px;
    padding: 10px 2px;
}

.galeria-arroba a {
    text-decoration: none;
    color: #4E4138;
}

.galeria-arroba a:hover{
    text-decoration: underline;
}

.galeria img{
    transition: transform 0.3s ease;
}

.galeria img:hover {
    transform: scale(1.1);
}

.contato {
    margin-top: 100px;
    background-color: #4E4138;
    padding: 60px
}

.contato h2 {
    display: flex;
    color: #fff;
    margin: 0 auto;
    justify-content: center;
}

form {
    display: flex;
    justify-content: center;
    padding: 60px;
}

.campo-email {
    border: 2px solid #fff;
    background-color: transparent;
    padding: 8px;
    margin-right: 18px;
    width: 30%;
}

button {
    background-color: #DBD4BF;  
    padding: 8px; 
    width: 20%;
    text-transform: uppercase;
    font-family: 'Effra', sans-serif;
    border: none;
    cursor: pointer;
}

footer {
    height: 50px;
    padding: 12px;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    font-size: 20px;
}

footer p {
    margin-right: 10px;
}

.footer-icones {
    display: flex;
}

.footer-icones ul {
    display: flex;
}

.footer-icones li {
    list-style: none;
    margin-right: 8px;
    align-items: center;
}

.footer-icones img {
    height: 20px;
}

@media screen and (max-width: 767px) {

    .container {
        max-width: 90%;
    }
    
    .logo {
        display: flex;
        justify-content: center;
        margin: 0 auto;
    }
    
    .menu {
        display: none;
    }

    .btn-menu {
        display: flex;
        justify-content: center;
        margin-top: 16px;
        padding-bottom: 16px;
    }

    .btn-menu button {
        padding: 8px;
        height: 40px;
        width: 100px;
        font-size: 10px;
        border-radius: 20px;
        /* display: none; */
    }
    
    .sobre {
        display: grid;
        grid-template-columns: 100%;
        margin-top: 100px;
    }

    .sobre-img {
        display: flex;
        justify-content: center;
    }

    .sobre-texto {
        text-align: center;
    }

    .sobre-texto p {
        margin: 20px auto;
        width: 80%;
    }

    .sobre-icones {
        justify-content: center;
    }

    .itens {
        margin-top: 100px;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        column-gap: 2%;
        row-gap: 5%;
        margin-bottom: 100px;
    }

    .item img {
        height: 200px;
    }

    .topo-item {
        font-size: 14px;
    }

    .carrinho {
        font-size: 12px;
    }

    .galeria-texto {
        text-align: center;     
    }

    .galeria img {
        height: 150px;
    }

    .galeria-itens {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        column-gap: 1%;
        row-gap: 1%;
    }

    .galeria-arroba {
        margin-top: 30px;
    }

    form {
        display: grid;
    }
    
    .contato .campo-email, button {
        grid-template-columns: 100%;
        /* display: block; */
        margin-bottom: 15px;
        /* row-gap: 20px; */
        width: 200px;
        /* justify-content: center; */
    }


}


@media screen and (min-width: 768px) and (max-width: 1023px) {
    .container {
        max-width: 90%;
    }

    .btn-menu {
        display: none;
    }
}

@media screen and (min-width: 1024px) {
    
    .btn-menu {
        display: none;
    }
}

